# ips-protodesc-code

./: .gitignore  FUNDING.md  LICENSE  Makefile  Pipfile  README.md  common-protocol-abstraction.json  dlclient.py  example_desc.def  expressions.py  output_tests.py  parse-ietf-doc.py  parse-protodesc.py  parse_protodesc.py  parse_rfc_txt.py  parse_rfc_xml.py  protocol.py  protocoltypeelements.py  protocoltypes.py  quic.def  quic.py  rfc-grammar.txt  rfc.py  rtp.def  run-tests.sh  rust-test.sh  rust_output.rs  setup.py  tcp.def  tcp.txt  test  test-rust.txt  test.json  test.py  test.txt  test.xml  test2.py  test_protocol.py  test_struct_as_type.py  testcase.rs  (+4 more)
.circleci/: config.yml
ciserver/: djhttp.py  dlclient.py  fs.py  hello.py  paths.py
constraints/: Cargo.toml
examples/: .gitignore  Makefile  constrained_struct.py  draft-ietf-tcpm-rfc793bis-21.xml  draft-ietf-tcpm-rfc793bis-25.xml  draft-ietf-tcpm-rfc793bis-26.xml  draft-ietf-tcpm-rfc793bis-27.xml  draft-mcquistin-augmented-ascii-diagrams-05.txt  draft-mcquistin-augmented-ascii-diagrams-05.xml  draft-mcquistin-augmented-ascii-diagrams-07.xml  draft-mcquistin-augmented-ascii-diagrams-08.txt  draft-mcquistin-augmented-ascii-diagrams-08.xml  draft-mcquistin-augmented-ascii-diagrams.txt  draft-mcquistin-augmented-ascii-diagrams.xml  draft-mcquistin-augmented-tcp-example-00.xml  draft-mcquistin-augmented-tcp-example-02.xml  draft-mcquistin-augmented-tcp-example.xml  draft-mcquistin-augmented-udp-example-00.xml  draft-mcquistin-augmented-udp-example.xml  draft-mcquistin-quic-augmented-diagrams-03.xml  draft-mcquistin-quic-augmented-diagrams.xml  draft-mcquistin-simple-example.xml  rfc9293.xml
formatters/: __init__.py  c_parser.py  (+4 more)
tests/793bis-testing/testharness/: Cargo.toml
tests/793bis-testing/testharness/tests/: parsing-tests.rs
tests/tcp-testing/testharness/: Cargo.toml
tests/tcp-testing/testharness/tests/: parsing-tests.rs
tests/udp-testing/testharness/: Cargo.toml
tests/udp-testing/testharness/tests/: parsing-tests.rs
tests/udp-testing/udp-testharness/: Cargo.toml
tests/udp-testing/udp-testharness/tests/: parsing-tests.rs
(+326 files in other folders)
