[package]
name = "testharness"
version = "0.1.0"
authors = ["Stephen McQuistin <sm@smcquistin.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
draft_ietf_tcpm_rfc793bis_25 = { path = "../../../test-results/draft-ietf-tcpm-rfc793bis-25" }
pcap = "*"
