[package]
name = "udp_testharness"
version = "0.1.0"
authors = ["Stephen McQuistin <sm@smcquistin.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
draft_mcquistin_augmented_udp_example = { path = "../../../examples/output/draft/draft-mcquistin-augmented-udp-example/rust" }
pcap = "*"
